--- a/platformio.ini
+++ b/platformio.ini
@@ -66,6 +66,7 @@ board_build.embed_txtfiles =
 ; ---------------------------------------------------------------------------------------------
 
 [env:esp32dev]
+# Для отката на версию 4.4.3 добавьте @5.3.0: platform = espressif32@5.3.0
 platform = espressif32
 board = esp32dev
 framework = espidf
