Changing paths to work in Linux

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = esp32dev
+
 ; ---------------------------------------------------------------------------------------------
 ; Общая конфигурация
 ; ---------------------------------------------------------------------------------------------
@@ -32,17 +35,17 @@ lib_ldf_mode = deep
 
 ; Публичные библиотеки из каталога библиотек PlatformIO или GitHub
 lib_deps =
+    ../../libs/consts
 
 ; Локальные библиотеки
 lib_extra_dirs =
-    C:\PlatformIO\libs\certs
-    C:\PlatformIO\libs\peripherals
-    C:\PlatformIO\libs\system
-    C:\PlatformIO\libs\sensors
-    C:\PlatformIO\libs\wifi
-    C:\PlatformIO\libs\clouds
-    C:\PlatformIO\libs
-
+    ../../libs/certs
+    ../../libs/peripherals
+    ../../libs/system
+    ../../libs/sensors
+    ../../libs/wifi
+    ../../libs/clouds
+    
 ; ---------------------------------------------------------------------------------------------
 ; Разделы
 ; ---------------------------------------------------------------------------------------------
@@ -55,11 +58,11 @@ board_build.partitions = partitions.csv
 
 board_build.embed_txtfiles =
     ; Сертификат ISRG Root X1 (используется как корневой для MQTT, OTA и других серверов) действителен по 4 июня 2035 г. 14:04:38
-    C:\PlatformIO\libs\certs\isrg_root_x1.pem
+    ../../libs/certs/isrg_root_x1.pem
     ; Сертификат DigiCert High Assurance EV Root CA (используется как корневой для ThingSpeak и других серверов) действителен по 10 ноября 2031 г. 3:00:00
-    C:\PlatformIO\libs\certs\digi_cert.pem
+    ../../libs/certs/digi_cert.pem
     ; Сертификат Telegram API действителен по 29 июня 2034 г. 20:06:20
-    C:\PlatformIO\libs\certs\api_telegram_org.pem
+    ../../libs/certs/api_telegram_org.pem
     
 ; ---------------------------------------------------------------------------------------------
 ; Конфигурация контроллера
@@ -67,7 +70,7 @@ board_build.embed_txtfiles =
 
 [env:esp32dev]
 # Для отката на версию 4.4.3 добавьте @5.3.0: platform = espressif32@5.3.0
-platform = espressif32
+platform = espressif32 @ 6.3.2
 board = esp32dev
 framework = espidf
 upload_speed = 921600
