--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,6 @@
 FILE(GLOB_RECURSE app_sources ${CMAKE_SOURCE_DIR}/src/*.*)
 idf_component_register(SRCS ${app_sources})
 
-target_add_binary_data(${COMPONENT_TARGET} C:/PlatformIO/libs/certs/isrg_root_x1.pem TEXT)
-target_add_binary_data(${COMPONENT_TARGET} C:/PlatformIO/libs/certs/digi_cert.pem TEXT)
-target_add_binary_data(${COMPONENT_TARGET} C:/PlatformIO/libs/certs/api_telegram_org.pem TEXT)
+target_add_binary_data(${COMPONENT_TARGET} ../../../libs/certs/isrg_root_x1.pem TEXT)
+target_add_binary_data(${COMPONENT_TARGET} ../../../libs/certs/digi_cert.pem TEXT)
+target_add_binary_data(${COMPONENT_TARGET} ../../../libs/certs/api_telegram_org.pem TEXT)
