--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,6 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[platformio]
-default_envs = esp32dev
-
 ; ---------------------------------------------------------------------------------------------
 ; Общая конфигурация
 ; ---------------------------------------------------------------------------------------------
@@ -25,27 +22,28 @@ build_flags =
 monitor_filters = 
     direct
     ; log2file
+    ; esp32_exception_decoder
 
 ; ---------------------------------------------------------------------------------------------
 ; Библиотеки
 ; ---------------------------------------------------------------------------------------------
 
 ; Режим поиска зависимостей
-lib_ldf_mode = deep
+lib_ldf_mode = chain+
 
 ; Публичные библиотеки из каталога библиотек PlatformIO или GitHub
 lib_deps =
-    ../../libs/consts
 
 ; Локальные библиотеки
 lib_extra_dirs =
-    ../../libs/certs
-    ../../libs/peripherals
-    ../../libs/system
-    ../../libs/sensors
-    ../../libs/wifi
-    ../../libs/clouds
-    
+    C:\PlatformIO\libs\certs
+    C:\PlatformIO\libs\system
+    C:\PlatformIO\libs\peripherals
+    C:\PlatformIO\libs\sensors
+    C:\PlatformIO\libs\wifi
+    C:\PlatformIO\libs\clouds
+    C:\PlatformIO\libs
+
 ; ---------------------------------------------------------------------------------------------
 ; Разделы
 ; ---------------------------------------------------------------------------------------------
@@ -58,20 +56,22 @@ board_build.partitions = partitions.csv
 
 board_build.embed_txtfiles =
     ; Сертификат ISRG Root X1 (используется как корневой для MQTT, OTA и других серверов) действителен по 4 июня 2035 г. 14:04:38
-    ../../libs/certs/isrg_root_x1.pem
+    C:\PlatformIO\libs\certs\isrg_root_x1.pem
     ; Сертификат DigiCert High Assurance EV Root CA (используется как корневой для ThingSpeak и других серверов) действителен по 10 ноября 2031 г. 3:00:00
-    ../../libs/certs/digi_cert.pem
+    C:\PlatformIO\libs\certs\digi_cert.pem
     ; Сертификат Telegram API действителен по 29 июня 2034 г. 20:06:20
-    ../../libs/certs/api_telegram_org.pem
+    C:\PlatformIO\libs\certs\api_telegram_org.pem
     
 ; ---------------------------------------------------------------------------------------------
 ; Конфигурация контроллера
 ; ---------------------------------------------------------------------------------------------
 
 [env:esp32dev]
-# Для отката на версию 4.4.3 добавьте @5.3.0: platform = espressif32@5.3.0
-platform = espressif32 @ 6.3.2
-board = esp32dev
+platform = espressif32
+; platform = espressif32@5.3.0
+; platform = https://github.com/platformio/platform-espressif32.git
 framework = espidf
+board = esp32dev
 upload_speed = 921600
+; upload_speed = 9600
 monitor_speed = 115200
