Адаптация под версию ESP-IDF 5.1.1

--- a/platformio.ini
+++ b/platformio.ini
@@ -57,8 +57,8 @@ board_build.partitions = partitions.csv
 board_build.embed_txtfiles =
     ; Сертификат ISRG Root X1 (используется как корневой для MQTT, OTA и других серверов) действителен по 4 июня 2035 г. 14:04:38
     C:\PlatformIO\libs\certs\isrg_root_x1.pem
-    ; Сертификат DigiCert High Assurance EV Root CA (используется как корневой для ThingSpeak и других серверов) действителен по 10 ноября 2031 г. 3:00:00
-    C:\PlatformIO\libs\certs\digi_cert.pem
+    ; Сертификат DigiCert Global Root G2 (используется как корневой для ThingSpeak и других серверов) действителен по 15 января 2038 г. 12:00:00
+    C:\PlatformIO\libs\certs\digi_cert_g2.pem
     ; Сертификат Telegram API действителен по 29 июня 2034 г. 20:06:20
     C:\PlatformIO\libs\certs\api_telegram_org.pem
     
